Fri Aug  9 08:33:10 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/DynAny_Handler/DataType_Handler.cpp:
        * tools/Config_Handlers/DynAny_Handler/DynAny_Handler.cpp:
        * tools/Config_Handlers/DynAny_Handler/DynEnum_Handler.cpp:
          Implement default values for all numeric fields, they could
          just now <value/> in the cdp, we than default to 0 for numeric
          fields, to false for boolean.

Thu Aug  1 11:55:34 UTC 2013  Marcel Smit  <msmit@remedy.nl>

        * docs/schema/Basic_Deployment_Data.xsd:

        * tools/Config_Handlers/Any_Handler.cpp:
        * tools/Config_Handlers/Basic_Deployment_Data.hpp:
        * tools/Config_Handlers/Basic_Deployment_Data.cpp:

        * tools/Config_Handlers/DynAny_Handler/DynAlias_Handler.cpp:
        * tools/Config_Handlers/DynAny_Handler/DynAny_Handler.cpp:
        * tools/Config_Handlers/DynAny_Handler/DynAny_Handler.mpc:
        * tools/Config_Handlers/DynAny_Handler/DynArray_Handler.h:
        * tools/Config_Handlers/DynAny_Handler/DynArray_Handler.cpp:
        * tools/Config_Handlers/DynAny_Handler/DynSequence_Handler.cpp:

          Added support for arrays. Expanded the CIAO Bug_3769_Regression test
          to test this.
          Log:
              commit d76669ffd4319f509fb70a23357bc625bd439394
              Author: Johnny Willemsen <jwillemsen@remedy.nl>
              Date:   Thu Aug 1 13:03:49 2013 +0200

                        Removed commented out code (issue #1551)
                      * DAnCE/tools/Config_Handlers/DynAny_Handler/DynAlias_Handler.cpp:

              commit c48685af6b186881a3dd5c04e3f81bebc594a3c6
              Author: Marcel Smit <msmit@remedy.nl>
              Date:   Thu Aug 1 11:57:18 2013 +0200

                  Changes after review
                  (refs #1551)

                      * CIAO/tests/Bug_3769_Regression/Foo_exec.cpp:
                        Fixed some faulty error logs.
